0.3.5
- The <%namespace> tag allows expressions
  for the `file` argument, i.e. with ${}.
  The `context` variable, if needed,
  must be referenced explicitly.
  [ticket:141]

- Fixed previously non-covered regular 
  expression, such that using a ${} expression 
  inside of a tag element that doesn't allow 
  them raises a CompileException instead of
  silently failing.
  
0.3.4
- Now using MarkupSafe for HTML escaping,
  i.e. in place of cgi.escape().  Faster
  C-based implementation and also escapes
  single quotes for additional security.
  Supports the __html__ attribute for
  the given expression as well.
  
  When using "disable_unicode" mode,
  a pure Python HTML escaper function
  is used which also quotes single quotes.
  
  Note that Pylons by default doesn't 
  use Mako's filter - check your 
  environment.py file.
  
- Fixed call to "unicode.strip" in 
  exceptions.text_error_template which
  is not Py3k compatible.  [ticket:137]
  
0.3.3
- Added conditional to RichTraceback
  such that if no traceback is passed
  and sys.exc_info() has been reset,
  the formatter just returns blank
  for the "traceback" portion.
  [ticket:135]
  
- Fixed sometimes incorrect usage of 
  exc.__class__.__name__
  in html/text error templates when using 
  Python 2.4 [ticket:131]

- Fixed broken @property decorator on 
  template.last_modified

- Fixed error formatting when a stacktrace
  line contains no line number, as in when
  inside an eval/exec-generated function.
  [ticket:132]

- When a .py is being created, the tempfile
  where the source is stored temporarily is
  now made in the same directory as that of
  the .py file.  This ensures that the two
  files share the same filesystem, thus 
  avoiding cross-filesystem synchronization
  issues.  Thanks to Charles Cazabon.
  
0.3.2
- Calling a def from the top, via 
  template.get_def(...).render() now checks the 
  argument signature the same way as it did in 
  0.2.5, so that TypeError is not raised.